# pro2

./: .gitignore  ARCHITECTURE.md  CONCEPTUAL_STAGE.md  CURRENT-STAGE.md  DATA2_ANALYSIS.md  DEV-STATUS-REVIEW.md  FUTURE_TASKS.md  GERMES_NOTATION.md  IMPLEMENTATION_ARTICLE.md  KNOWLEDGE_FRAMEWORK.md  META-PRO2-BRIDGE.md  PASSPORT.md  PLAN-v51-six-sources-integration.md  PORTAL-PROTOCOL.md  PSEUDORAG_YIJING_BRIDGE.md  README.md  REPORT-v53-v59.md  REPORT-v60-v61-status.md  TURNING_POINT_ANALYSIS.md  analysis-habr-1005298.md  archetypal-interlingua-theory.md  bench_all.py  bench_all_results.json  bench_moe.py  bench_stability.py  bench_v10_log.json  bench_v11_log.json  bench_v12_log.json  bench_v13_log.json  bench_v14_log.json  bench_v1_log.json  bench_v2_log.json  bench_v3_log.json  bench_v4_log.json  bench_v5_log.json  bench_v6_log.json  bench_v7_log.json  bench_v8_log.json  bench_v9_log.json  bidir_train.py  (+96 more)
.claude/: settings.json
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXPERIMENTS.md  FULL_AUDIT_REPORT.md  GEOMETRY.md  IMPLEMENTATION_STATUS.md  INDEX.md  INFERENCE.md  MODELS.md  PORTAL.md  QUICKSTART.md  THEOREMS.md  THEORY_VS_PRACTICE.md  TRAINING.md  TRAINING_UTILS.md  v61-bridged-interlingua-methodology.md
experiments/: experiment_matrix.py  glyph_comparison.json  hexlearn_router_log.json  interlingua_fixed_log.json  kasatkin_router_log.json  lci_attractor_results.json  lean_baseline_log.json  nautilus_15agent_log.json  new_agents_summary.json  palace_block_log.json  q4_q6_result.json  q4_q6_validation_result.json  roundabout_log.json  (+12 more)
(+300 files in other folders)
