[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "yijing-transformer"
version = "0.50.0"
description = "Transformer with hypercube geometry inductive bias (Yi Jing hexagrams)"
requires-python = ">=3.8"
dependencies = ["torch>=2.0.0"]

[project.optional-dependencies]
data = ["datasets>=2.14.0", "sentencepiece>=0.2.0"]
viz = ["matplotlib>=3.7.0"]
tracking = ["wandb>=0.16.0", "tensorboard>=2.13.0"]
all = ["datasets>=2.14.0", "sentencepiece>=0.2.0", "matplotlib>=3.7.0", "wandb>=0.16.0", "tensorboard>=2.13.0", "pytest"]
